packages/tree-sitter-forma/test/corpus/tasks.txt
=================================
deterministic task
=================================

task greet_user {
  intent "Greet the current user"

  input {
    user_name: Text?
  }

  output {
    message: Text
  }

  compute {
    message = if user_name
      then "Hello, {user_name}!"
      else "Hello, world!"
  }

  verify {
    message.length > 0
  }
}

---

(source_file
  (task_declaration
    name: (identifier)
    (intent_block)
    (input_block)
    (output_block)
    (compute_block)
    (verify_block)))

=================================
agent task
=================================

task greet_user_warmly {
  intent "Write a short friendly greeting for the current user"

  input {
    user_name: Text?
  }

  output {
    message: Text
  }

  agent {
    instruction """
    Write one concise greeting.
    Use the user's name if present.
    Do not ask a follow-up question.
    """
  }

  permissions {
    read
    search
    test
  }

  constraints {
    message.words <= 12
  }

  verify {
    message.length > 0
    message.words <= 12
  }
}

---

(source_file
  (task_declaration
    name: (identifier)
    (intent_block)
    (input_block)
    (output_block)
    (agent_block)
    (permissions_block)
    (constraints_block)
    (verify_block)))

=================================
structured output task
=================================

task review_diff {
  intent "Review a code diff"

  input {
    diff: Text
  }

  output {
    summary: Text
    findings: Finding[]
    clean: Boolean

    object Finding {
      path: Text
      line: Number?
      message: Text
    }
  }

  agent {
    instruction """
    Return structured review findings.
    """
  }
}

---

(source_file
  (task_declaration
    name: (identifier)
    (intent_block)
    (input_block)
    (output_block
      (object_schema
        name: (identifier)))
    (agent_block)))
